@@ -1,3 +1,4 @@
+4/2/13 Switched from phetcommon/inheritance to phet_core/inherit
 3/6/13 delete phetcommon type (Dimension2D, Vector2D, Point2D), use dot type (Dimension2 and Vector2)
 3/6/13 delete submodules and common/
 3/6/13 expect dependent repositories (phetcommon, easel-phet) to be checked out as siblings in the directory hierarchy
